--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -15,7 +15,7 @@ $verde: #71B100;
 $blanco: white;
 $gris: #e1e1e1;
 $grisOscuro: #333333;
-
+$rojo: rgb(173, 31, 31);
 $separacion: 5rem;
 
 // Fuentes
