--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,10 +1,8 @@
 .no-webp .inicio {
-    background-image: url(../../../build/img/header.jpg);
-    max-width: 100%;
+    background-image: url(../img/header.jpg);
 }
-.webp .inicio{
-    background-image: url(../../../build/img/header.webp);
-    max-width: 100%;
+.webp .inicio {
+    background-image: url(../img/header.webp);
 }
 
 .header {
