--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,6 +4,7 @@
 @import 'base/globales';
 @import 'base/utilidades';
 @import 'base/botones';
+@import 'base/darkmode';
 
 /** UI **/
 
@@ -15,7 +16,9 @@
 @import 'layout/contactar';
 @import 'layout/inferior';
 @import 'layout/testimoniales';
+@import 'layout/formularios';
 
 /** Paginas internas **/
 
 @import 'internas/nosotros';
+@import 'internas/admin';
