--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -29,9 +29,12 @@
     text-decoration: none;
     padding: 1rem 3rem;
     text-align: center;
-    margin-top: $separacion / 2;
+    margin-top: calc($separacion / 2);
     display: $display;
+    border: none;
+   
     &:hover{
         background-color: darken($bgColor, 5);
+        cursor: pointer;
     }
 }
