--- a/src/scss/layout/_anuncios.scss
+++ b/src/scss/layout/_anuncios.scss
@@ -6,6 +6,7 @@
 .anuncio{
     background-color: lighten($gris,5) ;
     border: 1px solid darken($gris, 10);
+    margin-bottom: 2rem;
     .contenido-anuncio {
         padding:2rem;
     }
@@ -18,7 +19,6 @@
             height: 11rem;
             overflow: hidden;
             text-overflow:ellipsis;
-            // Addition lines for 2 line or multiline ellipsis
             display: -webkit-box !important;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
