--- a/src/scss/layout/_contactar.scss
+++ b/src/scss/layout/_contactar.scss
@@ -1,8 +1,8 @@
 .no-webp .imagen-contacto{
-    background-image: url(../../../build/img/encuentra.jpg);
+    background-image: url('../img/encuentra.jpg');
 }
 .webp .imagen-contacto{
-    background-image: url(../../../build/img/encuentra.webp);
+    background-image: url('../img/encuentra.webp');
 }
 .imagen-contacto{
     background-position: center center;
