--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,9 +1,15 @@
 .footer {
-    padding: $separacion / 2 0;
+    padding: calc($separacion / 2) 0;
     background-color: $grisOscuro;
     margin-bottom: 0;
     .contenido-footer{
-        padding-top: $separacion / 2;
+        padding-top: calc($separacion / 2);
+    }
+
+    .navegacion{
+        visibility: visible;
+        opacity: 1;
+        height: auto;
     }
     .copyright{
         color: $blanco;
