--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,17 +1,48 @@
+.derecha{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @include tablet{
+        align-items: flex-end;
+    }
+    .dark-mode-boton{
+        width: 3rem;
+        margin-top: 3rem;
+        margin-bottom: 3rem;
+        filter: invert(100%);
+        &:hover {
+            cursor: pointer;
+        }
+        @include tablet {
+            margin-top: 0;
+        }
+    }
+}
+
 .barra {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    margin: 5rem;
     padding-top: 3rem;
     @include tablet {
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-end;
     }
 }
-
+// configuracion del menu desplegable//
 .navegacion {
+
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    transition: visibility .3s ease-in-out, opacity 0.5s linear, height 0.5s linear;   // Aquí se realiza la transicion del Menú desplegable //
     @include tablet {
+        opacity: 1;
         display: flex;
         align-items: center;
+        visibility: visible;
     }
     a {
         color: $blanco;
@@ -28,4 +59,22 @@
             }
         }
     }
+}
+
+/** Menu **/
+.mobile-menu{
+    @include tablet {
+        display: none;
+    }
+    img {
+        width: 5rem;
+
+    }
+}
+
+// Menú desplegado //
+.mostrar {
+    visibility: visible;
+    opacity: 1;
+    height: auto;
 }
